--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           type="number"
           class="form-control"
           id="number1"
-          onblur="clearAnswer()"
+          oninput="clearAnswer()"
         />
       </div>
 
@@ -48,7 +48,7 @@
           type="number"
           class="form-control"
           id="number2"
-          onblur="clearAnswer()"
+          oninput="clearAnswer()"
         />
       </div>
     </div>
